--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi~=0.115.8",
     "uvicorn~=0.34.0",
     "psycopg2-binary>=2.9.10,<3.0.0",
+    "pillow>=12.0.0",
 ]
 
 requires-python = ">=3.10,<3.14"
